Finished domain generator

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,14 @@
     <div class="container-fluid text-center">
       <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
+      <p id="websiteurl" class="alert alert-warning mt-4">
+        THIS IS YOUR NEW WEBSITE:
       </p>
+      <script src="app.js">
+        //   //   HTML : <element onload="myScript">
+        //   //   JS   : object.onload = function(){myScript};
+        //       <element onload="generateWebSite">
+      </script>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
